--- a/PREPROCESSING.Rmd
+++ b/PREPROCESSING.Rmd
@@ -13,8 +13,7 @@ library("lubridate")
 
 
 ```{r}
-setwd("C:\\Users\\LENOVO\\Downloads\\DA_PROJECT")
-df = read.csv("covid.csv")
+df = read.csv(".\\Dataset\\covid.csv")
 df
 ```
 ## Analyzing data
@@ -71,11 +70,11 @@ data
 ```
 
 ```{r}
-# write.csv(data,"preprocessed_data.csv", row.names = TRUE)
+write.csv(data,".\\Dataset\\preprocessed_data.csv", row.names = TRUE)
 ```
 
 ```{r}
-pdata = read.csv("preprocessed_data.csv")
+pdata = read.csv(".\\Dataset\\preprocessed_data.csv")
 pdata
 ```
 
